--- a/KaraokeGenerator/app/src/main/res/values/colors.xml
+++ b/KaraokeGenerator/app/src/main/res/values/colors.xml
@@ -8,4 +8,9 @@
     <color name ="main_color">#3F51B5</color>
     <color name ="secondary_color">#303F9F</color>
 
+    <color name="gplus_color_1">#3e802f</color>
+    <color name="gplus_color_2">#f4b400</color>
+    <color name="gplus_color_3">#427fed</color>
+    <color name="gplus_color_4">#b23424</color>
+
 </resources>
