--- a/KaraokeGenerator/app/src/main/res/layout/content_main.xml
+++ b/KaraokeGenerator/app/src/main/res/layout/content_main.xml
@@ -33,9 +33,11 @@
         <fr.castorflex.android.circularprogressbar.CircularProgressBar
             xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
             android:indeterminate="true"
+            android:id="@+id/loading_circle_bar"
+            android:visibility="gone"
             app:cpb_color="#FFee44"
             app:cpb_colors="@array/mycolors"
             app:cpb_rotation_speed="1.0"
