--- a/KaraokeGenerator/app/src/main/res/layout/content_main.xml
+++ b/KaraokeGenerator/app/src/main/res/layout/content_main.xml
@@ -19,7 +19,7 @@
         android:layout_marginBottom="5dp"
         android:layout_centerHorizontal="true"
         android:text="Generate a karaoke song now!"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="90dp"
         style="@style/HeaderText"/>
 
     <RelativeLayout
@@ -46,11 +46,10 @@
             app:cpb_min_sweep_angle="10"
             app:cpb_max_sweep_angle="300"
             />
-
     </RelativeLayout>
 
     <Button
-        android:id="@+id/report_symptoms_button"
+        android:id="@+id/upload_song_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingBottom="30dp"
